--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 black==25.1.0
 mypy==1.17.1
+pdoc==16.0.0
 z3-solver==4.13.3.0
 z3-solver-stubs @ git+https://github.com/neta-elad/z3-solver-stubs@v4.13.3.0-20
